videos segítséggel haladás (Youtube: Ania K...)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,7 @@
-body {
-    margin: 0%;
-    background-color: black;
+.grid {
+    display: flex;
+    flex-wrap: wrap;
+    width: 560px;
+    height: 560px;
+    border: solid black;
 }
